# bench-my-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  ROADMAP.md  pyproject.toml
examples/: basic_config.json  compare_config.json  local_ollama.json
src/bench_my_llm/: __init__.py  __main__.py  cli.py  compare.py  metrics.py  prompts.py  reporter.py  runner.py
tests/: test_bench.py  test_cli.py  test_cli_extended.py  test_compare.py  test_error_paths.py  test_export_history.py  test_metrics_extended.py  test_new_features.py  test_reporter.py  test_runner_extended.py  test_runner_mock.py
