[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bench-my-llm"
version = "0.1.0"
description = "Dead-simple LLM benchmarking CLI. Measure TTFT, TPS, latency, cost, and quality for any OpenAI-compatible API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Manas Vardhan" }]
keywords = ["llm", "benchmark", "latency", "openai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "openai>=1.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
bench-my-llm = "bench_my_llm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bench_my_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
